summative.moria.Moria.scala.error
Erreur de compilation :
Moria:10: error: ')' expected but 'while' found.
  while (porteBiscuit() && !estSurBiscuit()) {
  ^Moria:13: error: ';' expected but 'if' found.
  if (estSurBiscuit() && porteBiscuit()) {
  ^